- MyArcadePlugin Lite -

v5.4.0 - 2017-09-08 - Based on MyArcadePlugin Pro 5.30.0
  * New - GameDistribution feed integration (http://www.gamedistribution.com/games/)
  * New - Auto update for Lite version
  * New - Stats page with useful statistics:
    - Summary Plays: Today, Yesterday, Last 7 Days, Last 30 Days, Total
    - Top 10 Games of all time
    - Daily game plays chart for 30 days
    - Hourly game plays chart for last 24 hours
    - Latest game plays with play durations
    - Ratio pie chart: registered vs. unregistered users
    - Most active users
    - Unpopular games
    - Currently unplayed games
  * New - Track game plays and play durations for each game and user
  * New - Global game play counter
  * New - Count game plays for each game
  * New - Upload game images with WP Media Uploader according to MyArcade permalink structure
  * New - Softgames - Language selection
  * New - Save thumbnails only at a single location
  * New - Add game thumbnails automatically to WordPress media library
  * New - Softgames - SSL suppport added
  * New - Option to handle SSL for already published games (Enable on the options page)
  * New - Rich text editors for game description and instructions
  * New - Use SSL to embed games if SSL is enabled for distributors who supports it
  * New - Option to fetch only mobile games
  * New - Filter to allow game filtering on fetching
    - apply_filters( 'myarcade_add_fetched_game', true, $game )
  * New - Updated Spilgames integration
  * Fix - Thumbnails marked as "Unattached" on the media library even if they are set as featured image
  * Fix - Images are not removed from media library on game delete
  * Fix - Post content thumbnail URL when using the %THUMB% placeholder
  * Fix - 2PG Feed URL
  * Fix - Display embed code on custom post meta
  * Tweak - Create required folders on access if they not exist
  * Tweak - Optimized import handler JS code to avoid conflicts if TinyMCE is disabled