@@ -1,4 +1,5 @@
 - MyArcadePlugin Lite -
+  * Tweak - Improved stats tracking
 
 v5.4.0 - 2017-09-08 - Based on MyArcadePlugin Pro 5.30.0
   * New - GameDistribution feed integration (http://www.gamedistribution.com/games/)
